VYZN: Matrix Messaging Integration (#455)
* install matrix-widget-api

* bldrs to vyzn integration wip

* test out routing

* refactor code, use store instead of router

* changes for codeReview

* move WidgetApi into react context, use navigation() instead of the detour in the store, add event emitter

* seperate events for selection an unselection of elements

* select multiple elements

* remove code comments

* changes from codereview

* VYZN-806: Tests for Bldrs integration

* fix issue after merge

* fix new linting issues after merge

* trigger preview deployment

* stabilize cypress integration tests

* cadview test fix

* fix yarn lock conflict

* parameters bug fix & adding test case for it

* added matrix-widget-api to the lock file

Signed-off-by: Pablo Mayrgundter <pablo.mayrgundter@gmail.com>
Co-authored-by: Adrian62D <opsec@example.org>
Co-authored-by: Abdel Rahman Osama <abdelrahman.osama@dev-worx.com>
Co-authored-by: Pablo Mayrgundter <pablo.mayrgundter@gmail.com>

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@sentry/react": "^7.31.1",
     "@sentry/tracing": "^7.31.1",
     "clsx": "^1.2.1",
+    "matrix-widget-api": "^1.1.1",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
