--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bldrs",
-  "version": "1.0.0-r633",
+  "version": "1.0.0-r634",
   "main": "src/index.jsx",
   "license": "MIT",
   "homepage": "https://github.com/bldrs-ai/Share",
@@ -49,6 +49,7 @@
     "remark-gfm": "^3.0.1",
     "three": "^0.135",
     "typescript": "^4.8.4",
+    "use-double-tap": "^1.3.4",
     "web-ifc-viewer": "^1.0.209",
     "web-vitals": "^2.1.0",
     "zustand": "^4.0.0"
