--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bldrs",
-  "version": "1.0.0-r641",
+  "version": "1.0.0-r642",
   "main": "src/index.jsx",
   "license": "MIT",
   "homepage": "https://github.com/bldrs-ai/Share",
@@ -20,6 +20,10 @@
     "serve-share": "yarn build-share && node config/serve.js",
     "serve-storybook": "start-storybook -p 6006",
     "test": "jest",
+    "cypress": "cypress run",
+    "cypress-spec": "cypress run --spec",
+    "cypress-headed": "cypress run --headed --no-exit",
+    "cypress-headed-spec": "cypress run --headed --no-exit --spec",
     "write-new-version": "node src/utils/version.mjs > package.json.new && shx mv package.json.new package.json"
   },
   "dependencies": {
