Introduce html-based AboutGuide.  Normalize dialogs. Use theme. (#531)
* Introduce html-based AboutGuide.  Normalize dialogs: rely more on mui components, typography, theme support, revive dialog header icons.  Move About into subfolder.

* Use open icon for open dialog header.  Use theme highlight.secondary for button hover color.

* Add screenshot of 3d buildings logo in public for AboutGuide.

* Use GlobalStyles for svg sizing, fill and small control icon sizing.  Dialog header icons to left of header text.  Fix broken AboutGuide background img.

* Restore theme colors to LogoB.

* Lots of color normalization.

* Use more of Mui Card components for notes.

* style open dialog and about dialog

* work in progress

* tuned the theme

* adjusted note card

* notecard border

* subtract scroll bar from sidedrawer

* control icons

* adjust control icons

* theme, fixed paths to models

* colors and toggle

* adjust the guide

* about guide and colors

* snackbar message

* fixes

* Delete #index.css#

* Refactor drawer.  Desktop working nicely

* Refactor drawer.  Mobile working again.

* Oleg changes to About.

* Oleg comments.

* Fix broken homepage e2e test, remove unused old copy of Components/AboutControl.jsx. Add cypress scripts to package

---------

Signed-off-by: Pablo Mayrgundter <pablo.mayrgundter@gmail.com>
Co-authored-by: OlegMoshkovich <oleg.mosh@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,9 +14,14 @@
   "compilerOptions": {
     "allowJs": true,
     "checkJs": true,
-    "module": "es6",
     "jsx": "react-jsx",
-    "pretty": false,
+    "lib": ["es6", "dom"],
+    "module": "es6",
     "noEmit": true,
+    "noImplicitAny": true,
+    "noImplicitThis": true,
+    "pretty": false,
+    "strict": true,
+    "strictNullChecks": true,
   },
 }
