--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "material-ui-popup-state": "^5.0.4",
     "matrix-widget-api": "^1.1.1",
     "normalize.css": "^8.0.1",
+    "postprocessing": "^6.29.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
