--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bldrs",
-  "version": "1.0.0-r622",
+  "version": "1.0.0-r624",
   "main": "src/index.jsx",
   "license": "MIT",
   "homepage": "https://github.com/bldrs-ai/Share",
@@ -8,17 +8,17 @@
     "url": "https://github.com/bldrs-ai/Share/issues"
   },
   "scripts": {
-    "build": "yarn build-share && yarn build-storybook",
-    "build-storybook": "shx mkdir -p docs && build-storybook -o docs/sb",
+    "build": "yarn build-share",
+    "build-cosmos": "cosmos-export --config .cosmos.config.json && shx mkdir -p docs && shx mv cosmos-export docs/sb",
     "build-share": "yarn write-new-version && node config/build.js && yarn build-share-copy-web-asm",
     "build-share-copy-web-asm": "shx cp node_modules/web-ifc/*.wasm docs/static/js",
+    "cosmos": "cosmos --config .cosmos.config.json",
     "deps-graph": "npx dependency-cruiser src --include-only 'jsx?' --config --output-type dot | dot -T svg > deps.svg",
     "husky-init": "husky install",
     "lint": "yarn eslint src && tsc",
     "precommit": "yarn lint && yarn test",
     "serve": "yarn serve-share",
     "serve-share": "yarn build-share && node config/serve.js",
-    "serve-storybook": "start-storybook -p 6006",
     "test": "jest",
     "cypress": "cypress run",
     "cypress-spec": "cypress run --spec",
@@ -33,8 +33,7 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@iconscout/react-unicons": "^1.1.6",
-    "@material-ui/core": "^4.12.4",
-    "@mui/icons-material": "^5.8.4",
+    "@mui/icons-material": "^5.11.9",
     "@mui/lab": "^5.0.0-alpha.95",
     "@mui/material": "^5.9.2",
     "@mui/styled-engine": "^5.8.7",
@@ -70,16 +69,7 @@
     "@bahmutov/cypress-esbuild-preprocessor": "^2.1.3",
     "@mui/types": "^7.2.3",
     "@pablo-mayrgundter/cookies.js": "^1.0.0",
-    "@storybook/addon-actions": "^6.5.10",
-    "@storybook/addon-essentials": "^6.5.10",
-    "@storybook/addon-interactions": "^6.5.10",
-    "@storybook/addon-links": "^6.5.10",
-    "@storybook/addons": "^6.5.10",
-    "@storybook/builder-webpack4": "^6.5.10",
-    "@storybook/manager-webpack4": "^6.5.10",
-    "@storybook/react": "^6.5.10",
-    "@storybook/testing-library": "^0.0.13",
-    "@storybook/theming": "^6.5.10",
+    "@svgr/webpack": "^6.5.1",
     "@testing-library/cypress": "^9.0.0",
     "@testing-library/dom": "^8.19.1",
     "@testing-library/jest-dom": "^5.16.5",
@@ -107,17 +97,17 @@
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-storybook": "^0.6.4",
     "eslint-plugin-testing-library": "^5.9.1",
+    "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "jsdom": "^20.0.3",
     "msw": "^0.47.4",
+    "react-cosmos": "^5.7.2",
     "shx": "^0.3.4",
-    "storybook-addon-material-ui": "^0.9.0-alpha.24",
-    "storybook-addon-turbo-build": "^1.1.0"
+    "webpack": "^5.75.0"
   },
   "msw": {
     "workerDirectory": "public"
