yarn build-cosmos: clean build before build.  Obey NODE_ENV production or development settings.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bldrs",
-  "version": "1.0.0-r636",
+  "version": "1.0.0-r637",
   "main": "src/index.jsx",
   "license": "MIT",
   "homepage": "https://github.com/bldrs-ai/Share",
@@ -9,15 +9,15 @@
   },
   "scripts": {
     "build": "yarn build-share && yarn build-cosmos",
-    "build-cosmos": "cosmos-export --config .cosmos.config.json && shx mkdir -p docs && shx mv cosmos-export docs/sb",
+    "build-cosmos": "rm -rf docs/sb ; cosmos-export --config .cosmos.config.json && shx mkdir -p docs && shx mv cosmos-export docs/sb",
     "build-share": "yarn write-new-version && node config/build.js && yarn build-share-copy-web-asm",
     "build-share-copy-web-asm": "shx cp node_modules/web-ifc/*.wasm docs/static/js",
-    "cosmos": "cosmos --config .cosmos.config.json",
     "deps-graph": "npx dependency-cruiser src --include-only 'jsx?' --config --output-type dot | dot -T svg > deps.svg",
     "husky-init": "husky install",
     "lint": "yarn eslint src && tsc",
     "precommit": "yarn lint && yarn test",
     "serve": "yarn serve-share",
+    "serve-cosmos": "cosmos --config .cosmos.config.json",
     "serve-share": "yarn build-share && node config/serve.js",
     "test": "jest",
     "cypress": "cypress run",
