--- a/.cosmos.config.json
+++ b/.cosmos.config.json
@@ -2,9 +2,9 @@
   "hot": "true",
   "watchDirs": ["src"],
   "hostname": "0.0.0.0",
-  "port": "8000",
+  "port": "8080",
+  "publicPath": "sb",
   "webpack": {
-    "configPath": ".cosmos.webpack.js",
-    "includeHashInOutputFilename": "true"
+    "configPath": ".cosmos.webpack.js"
   }
 }
