--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bldrs",
-  "version": "1.0.0-r697",
+  "version": "1.0.0-r698",
   "main": "src/index.jsx",
   "license": "MIT",
   "homepage": "https://github.com/bldrs-ai/Share",
@@ -44,6 +44,7 @@
     "@sentry/tracing": "^7.31.1",
     "canvas": "^2.11.0",
     "clsx": "^1.2.1",
+    "jest-three": "^1.3.1",
     "material-ui-popup-state": "^5.0.4",
     "matrix-widget-api": "^1.1.1",
     "normalize.css": "^8.0.1",
