--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feature-flags": "^1.0.0",
+    "react-helmet-async": "^1.3.0",
     "react-markdown": "^8.0.3",
     "react-router-dom": "^6.3.0",
     "remark-gfm": "^3.0.1",
