In-scene placemarks (#611)
* fix note sharing broken issue

* remove `console.log`

* fix effect option width spell missing

* prepare placemark

* toggle placemark, ray-casting

* generate svg mesh

* remove white background of placemarks

* place SVG mesh correctly

* add `placeMarkNoteId` for comment

* comment place mark saving logic

* use custom function to get hash parameters

* replace place mark icon

* rename `onDoubleTap` to `drop` in `PlaceMark` class

* double clicking to single clicking

* fix unit test issues

* fix place mark color breaking issue since Color mode is removed

* trim place mark position

* separate place mark dropping feature

* show place mark when url has its params

* change svg mesh generation method

* apply color to place mark mesh

* apply direction to every place mark since face normals are different

* add direction info to hash params

* reduce canvas height temporarily

* add offset when getting svg mesh

* combine hash params

* fix spell issue

* add post processing, but comment now

* update version

* remove note relations

* rename log key

* remove attributes from place mark svg

* add asset README for place mark

* bind three classes

* apply color on both Group and Mesh for place mark

* enable depthWrite

* apply sprite

* revert notes related code changes

* use function with jsdoc in `svg.js` file

* use named import when using `three`

* update log keys

* add unit tests for `svg.js`

* update version

* enable post processing

* test onBeforeCompile

* backup post processing place mark feature

* disable post processing

* show place marks behind objects

* remove `SceneLayer`

* remove unused files

* remove comments

* remove `lookAt` param in `CadView`

* use hook to reduce `CadView` size

* back to custom post processing

* place mark always look at front

* add occlusion outline

* make effect opt

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bldrs",
-  "version": "1.0.0-r631",
+  "version": "1.0.0-r713",
   "main": "src/index.jsx",
   "license": "MIT",
   "homepage": "https://github.com/bldrs-ai/Share",
@@ -42,6 +42,7 @@
     "@octokit/rest": "^19.0.3",
     "@sentry/react": "^7.31.1",
     "@sentry/tracing": "^7.31.1",
+    "canvas": "^2.11.0",
     "clsx": "^1.2.1",
     "material-ui-popup-state": "^5.0.4",
     "matrix-widget-api": "^1.1.1",
