--- a/.cosmos.config.json
+++ b/.cosmos.config.json
@@ -3,7 +3,7 @@
   "watchDirs": ["src"],
   "hostname": "0.0.0.0",
   "port": "8080",
-  "publicPath": "sb",
+  "publicUrl": "/cosmos/",
   "webpack": {
     "configPath": ".cosmos.webpack.js"
   }
