--- a/.github/workflows/end-to-end-tests.yml
+++ b/.github/workflows/end-to-end-tests.yml
@@ -17,6 +17,12 @@ jobs:
         id: checkout
         uses: actions/checkout@v2
 
+      - name: Install Node
+        id: install-node-16
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+
       - name: E2E Tests on Google Chrome
         id: e2e-on-google-chrome
         uses: cypress-io/github-action@v4
