VYZN: (feature) hide/unhide and temporary isolate IFC elements (#617)
* feat: custom viewer api

* subset list to dict

* remove log statement

* fix missing __getIFCViewerAPIMockSingleton

* pickByID new implementation

* fix: remove resetSelection guard to fix key down callback function lost state

* fix: reset selection guard back to fix failing tests and call the from the call back func changed

* subsets revisited

* unhide all hidden elements

* feature: ifc isolator component, incapsulates hide and isolate operations

* fix: ids loaded from meshes to insure having visual props

* fix: remove unused ifc classes imports

* fix: get express ids from model mesh  attributes for better performance

* fix: reset reveal upon unhide

* fix: turn off reveal on unhide all

* feat: hide/unhide icons in nav tree for spatial structures and root aggregators

* fix: failing unit tests

* linter fixes

* fix: reveal hidden elements material's depthTest

* re-evaluate reveal subset if on when hiding again

* fix: ifc viewer highlighter

* remove unused imports

* fix: disable hide icons on temp isolation mode

* reflect isoaltor status to selected elements store

* unit test for hide element by the tree icons

* toggle hide icon e2e test

* fix post processor

* fix failing cadview tests

* fix: placemarks broke the other post processing effects

* fix: remove singleton post-processor

* fix: space typo

* fix: disable lint error

* fix: maintain hidden elements when viewer changes

* fix: align hide icons to right

---------

Signed-off-by: Pablo Mayrgundter <pablo.mayrgundter@gmail.com>
Co-authored-by: Ibrahim Saad <ibrahim.saad@xbim.net>
Co-authored-by: OlegMoshkovich <oleg.mosh@gmail.com>
Co-authored-by: Pablo Mayrgundter <pablo.mayrgundter@gmail.com>

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bldrs",
-  "version": "1.0.0-r658",
+  "version": "1.0.0-r677",
   "main": "src/index.jsx",
   "license": "MIT",
   "homepage": "https://github.com/bldrs-ai/Share",
@@ -33,6 +33,9 @@
     "@bldrs-ai/ifclib": "^5.3.3",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@iconscout/react-unicons": "^1.1.6",
     "@mui/icons-material": "^5.11.9",
     "@mui/lab": "^5.0.0-alpha.95",
