Generalize src/* IFC references to prepare for .obj support.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "bldrs",
   "version": "1.0.0-r675",
+  "version": "1.0.0-r658",
   "main": "src/index.jsx",
   "license": "MIT",
   "homepage": "https://github.com/bldrs-ai/Share",
