--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bldrs",
-  "version": "1.0.0-r673",
+  "version": "1.0.0-r674",
   "main": "src/index.jsx",
   "license": "MIT",
   "homepage": "https://github.com/bldrs-ai/Share",
@@ -89,6 +89,7 @@
     "canvas": "^2.11.0",
     "cypress": "^12.3.0",
     "cypress-real-events": "^1.7.6",
+    "cypress-react-router": "^2.0.1",
     "esbuild": "^0.15.5",
     "esbuild-clean-plugin": "^1.0.0",
     "esbuild-copy-static-files": "^0.1.0",
