Introduce FixtureContext, to include style setup in base context for all fixtures. Upgrade svgr plugins and uniform config between esbuild and cosmos/webpack for uniform icon rendering.  Simplify some components.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bldrs",
-  "version": "1.0.0-r684",
+  "version": "1.0.0-r685",
   "main": "src/index.jsx",
   "license": "MIT",
   "homepage": "https://github.com/bldrs-ai/Share",
@@ -72,7 +72,8 @@
     "@bahmutov/cypress-esbuild-preprocessor": "^2.1.3",
     "@mui/types": "^7.2.3",
     "@pablo-mayrgundter/cookies.js": "^1.0.0",
-    "@svgr/webpack": "^6.5.1",
+    "@svgr/webpack": "^8.0.1",
+    "@svgr/plugin-jsx": "^8.0.1",
     "@testing-library/cypress": "^9.0.0",
     "@testing-library/dom": "^8.19.1",
     "@testing-library/jest-dom": "^5.16.5",
@@ -91,7 +92,7 @@
     "esbuild-clean-plugin": "^1.0.0",
     "esbuild-copy-static-files": "^0.1.0",
     "esbuild-plugin-progress": "^1.0.1",
-    "esbuild-plugin-svgr": "^1.0.1",
+    "esbuild-plugin-svgr": "^2.0.0",
     "eslint": "^8.22.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-cypress": "^2.12.1",
