--- a/.github/workflows/end-to-end-tests.yml
+++ b/.github/workflows/end-to-end-tests.yml
@@ -10,16 +10,51 @@ on:
       - main
 
 jobs:
+  install-cypress:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: checkout
+        id: checkout
+        uses: actions/checkout@v3
+
+      - name: Install Cypress
+        id: install-cypress
+        uses: cypress-io/github-action@v5
+        with:
+          runTests: false
+          build: yarn build-share
+
+      - name: Save build artifacts
+        id: build-artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: build
+          if-no-files-found: error
+          path: docs/
+
   run-cypress:
     runs-on: ubuntu-20.04
+    needs: install-cypress
+    strategy:
+      fail-fast: false
+      matrix:
+        containers: [1, 2, 3, 4]
+
     steps:
       - name: Checkout
         id: checkout
         uses: actions/checkout@v3
 
+      - name: Restore build artifacts
+        id: restore-artifacts
+        with:
+          name: build
+
       - name: E2E Tests on Google Chrome
         id: e2e-on-google-chrome
         uses: cypress-io/github-action@v5
         with:
+          record: true
+          parallel: true
           browser: chrome
-          build: yarn build-share
+          start: node config/serve.js
