Add missing action name+version

--- a/.github/workflows/end-to-end-tests.yml
+++ b/.github/workflows/end-to-end-tests.yml
@@ -47,6 +47,7 @@ jobs:
 
       - name: Restore build artifacts
         id: restore-artifacts
+        uses: actions/download-artifact@v3
         with:
           name: build
 
