--- a/.github/workflows/end-to-end-tests.yml
+++ b/.github/workflows/end-to-end-tests.yml
@@ -47,6 +47,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: build
+          path: docs/
 
       - name: E2E Tests on Google Chrome
         id: e2e-on-google-chrome
