--- a/.github/workflows/end-to-end-tests.yml
+++ b/.github/workflows/end-to-end-tests.yml
@@ -34,8 +34,30 @@ jobs:
           if-no-files-found: error
           path: docs/
 
-  run-cypress:
+  run-cypress-on-linux:
     runs-on: ubuntu-20.04
+    needs: install-cypress
+    steps:
+      - name: checkout
+        id: checkout
+        uses: actions/checkout@v3
+
+      - name: Restore build artifacts
+        id: restore-artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: build
+          path: docs/
+
+      - name: E2E Tests on Google Chrome
+        id: e2e-on-google-chrome
+        uses: cypress-io/github-action@v5
+        with:
+          browser: chrome
+          start: node config/serve.js
+
+  run-cypress-on-windows:
+    runs-on: windows-latest
     needs: install-cypress
     steps:
       - name: Checkout
