--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
   "compilerOptions": {
     "allowJs": true,
     "checkJs": true,
+    "target": "ES2021", 
     "jsx": "react-jsx",
     "lib": ["es6", "dom"],
     "module": "es6",
