Added WebIfc shim alias plugin to config/common.js

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bldrs",
-  "version": "1.0.0-r688",
+  "version": "1.0.0-r689",
   "main": "src/index.jsx",
   "license": "MIT",
   "homepage": "https://github.com/bldrs-ai/Share",
@@ -11,7 +11,7 @@
     "build": "yarn clean && yarn build-share && yarn build-cosmos",
     "build-cosmos": "shx rm -rf docs/cosmos; shx mkdir -p docs ; cosmos-export --config .cosmos.config.json && shx mv cosmos-export docs/cosmos",
     "build-share": "yarn write-new-version && node config/build.js && yarn build-share-copy-web-asm",
-    "build-share-copy-web-asm": "shx cp node_modules/web-ifc/*.wasm docs/static/js",
+    "build-share-copy-web-asm": "shx cp node_modules/web-ifc/*.wasm docs/static/js && shx cp node_modules/bldrs-conway/compiled/dependencies/conway-geom/Dist/*.wasm docs/static/js",
     "clean": "shx rm -rf docs",
     "deps-graph": "npx dependency-cruiser src --include-only 'jsx?' --config --output-type dot | dot -T svg > deps.svg",
     "husky-init": "husky install",
@@ -42,7 +42,6 @@
     "@octokit/rest": "^19.0.3",
     "@sentry/react": "^7.61.0",
     "@sentry/tracing": "^7.61.0",
-    "bldrs-conway": "/Users/soar/Documents/GitHub/conway/bldrs-conway-v0.0.1.tgz",
     "clsx": "^1.2.1",
     "cypress-react-router": "^2.0.1",
     "material-ui-popup-state": "^5.0.4",
