--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bldrs",
-  "version": "1.0.0-r691",
+  "version": "1.0.0-r692",
   "main": "src/index.jsx",
   "license": "MIT",
   "homepage": "https://github.com/bldrs-ai/Share",
@@ -20,7 +20,6 @@
     "husky-init": "husky install",
     "lint": "yarn eslint src && tsc",
     "precommit": "yarn lint && yarn test",
-    "serve": "yarn serve-share",
     "serve-cosmos": "cosmos --config .cosmos.config.json",
     "serve-share-conway": "yarn build-share-conway && USE_WEBIFC_SHIM=true node config/serve.js",
     "serve-share-webifc": "yarn build-share-webifc && USE_WEBIFC_SHIM=false node config/serve.js",
@@ -46,6 +45,7 @@
     "@octokit/rest": "^19.0.3",
     "@sentry/react": "^7.61.0",
     "@sentry/tracing": "^7.61.0",
+    "bldrs-conway": "./bldrs-conway-v0.0.1.tgz",
     "clsx": "^1.2.1",
     "cypress-react-router": "^2.0.1",
     "material-ui-popup-state": "^5.0.4",
