--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-feature-flags": "^1.0.0",
     "react-helmet-async": "^1.3.0",
     "react-markdown": "^8.0.3",
+    "react-qr-code": "^2.0.12",
     "react-router-dom": "^6.3.0",
     "remark-gfm": "^3.0.1",
     "three": "^0.135",
