* Update end to end Github Actions for Conway + WebIfc backends

--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "build-conway": "yarn clean && yarn build-share-conway && yarn build-cosmos",
     "build-webifc": "yarn clean && yarn build-share-webifc && yarn build-cosmos",
     "build-cosmos": "shx rm -rf docs/cosmos; shx mkdir -p docs ; cosmos-export --config .cosmos.config.json && shx mv cosmos-export docs/cosmos",
-    "build-share": "yarn write-new-version && node config/build.js && yarn build-share-copy-web-asm",
-    "build-share-conway": "USE_WEBIFC_SHIM=true yarn build-share",
-    "build-share-webifc": "USE_WEBIFC_SHIM=false yarn build-share",
-    "build-share-copy-web-asm": "shx cp node_modules/web-ifc/*.wasm docs/static/js && shx cp node_modules/bldrs-conway/compiled/dependencies/conway-geom/Dist/*.wasm docs/static/js",
+    "build-share": "yarn write-new-version && node config/build.js",
+    "build-share-conway": "USE_WEBIFC_SHIM=true yarn build-share && yarn build-share-copy-web-asm-conway",
+    "build-share-webifc": "USE_WEBIFC_SHIM=false yarn build-share && build-share-copy-web-asm-webifc",
+    "build-share-copy-web-asm-webifc": "shx cp node_modules/web-ifc/*.wasm docs/static/js",
+    "build-share-copy-web-asm-conway": "shx cp node_modules/bldrs-conway/compiled/dependencies/conway-geom/Dist/*.wasm docs/static/js",
     "clean": "shx rm -rf docs",
     "deps-graph": "npx dependency-cruiser src --include-only 'jsx?' --config --output-type dot | dot -T svg > deps.svg",
     "husky-init": "husky install",
