--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build-cosmos": "shx rm -rf docs/cosmos; shx mkdir -p docs ; cosmos-export --config .cosmos.config.json && shx mv cosmos-export docs/cosmos",
     "build-share": "yarn write-new-version && node config/build.js",
     "build-share-conway": "USE_WEBIFC_SHIM=true yarn build-share && yarn build-share-copy-web-asm-conway",
-    "build-share-webifc": "USE_WEBIFC_SHIM=false yarn build-share && build-share-copy-web-asm-webifc",
+    "build-share-webifc": "USE_WEBIFC_SHIM=false yarn build-share && yarn build-share-copy-web-asm-webifc",
     "build-share-copy-web-asm-webifc": "shx cp node_modules/web-ifc/*.wasm docs/static/js",
     "build-share-copy-web-asm-conway": "shx cp node_modules/bldrs-conway/compiled/dependencies/conway-geom/Dist/*.wasm docs/static/js",
     "clean": "shx rm -rf docs",
