Update end-to-end-tests.yml correct id field for install cypress

--- a/.github/workflows/end-to-end-tests.yml
+++ b/.github/workflows/end-to-end-tests.yml
@@ -19,8 +19,8 @@ jobs:
         id: checkout
         uses: actions/checkout@v3
 
-      - name: Install Cypress
-        id: install-cypress
+      - name: Install Cypress WebIfc
+        id: install-cypress-webifc
         uses: cypress-io/github-action@v5
         with:
           runTests: false
@@ -63,8 +63,8 @@ jobs:
         id: checkout
         uses: actions/checkout@v3
 
-      - name: Install Cypress
-        id: install-cypress
+      - name: Install Cypress Conway
+        id: install-cypress-conway
         uses: cypress-io/github-action@v5
         with:
           runTests: false
