--- a/.github/workflows/end-to-end-tests.yml
+++ b/.github/workflows/end-to-end-tests.yml
@@ -30,7 +30,7 @@ jobs:
         id: build-artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: build
+          name: build-${{ github.ref_name }}
           if-no-files-found: error
           path: docs/
 
@@ -46,7 +46,7 @@ jobs:
         id: restore-artifacts
         uses: actions/download-artifact@v3
         with:
-          name: build
+          name: build-${{ github.ref_name }}
           path: docs/
 
       - name: E2E Tests on Google Chrome
@@ -74,7 +74,7 @@ jobs:
         id: build-artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: build
+          name: build-${{ github.ref_name }}
           if-no-files-found: error
           path: docs/
 
@@ -90,7 +90,7 @@ jobs:
         id: restore-artifacts
         uses: actions/download-artifact@v3
         with:
-          name: build
+          name: build-${{ github.ref_name }}
           path: docs/
 
       - name: E2E Tests on Google Chrome
