Update end-to-end-tests.yml to wait for web-ifc tasks to complete before running conway tasks

--- a/.github/workflows/end-to-end-tests.yml
+++ b/.github/workflows/end-to-end-tests.yml
@@ -58,6 +58,7 @@ jobs:
 
   install-cypress-conway:
     runs-on: ubuntu-20.04
+    needs: run-cypress-on-linux-webifc
     steps:
       - name: checkout
         id: checkout
