Lint config and cypress

--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "clean": "shx rm -rf docs",
     "deps-graph": "npx dependency-cruiser src --include-only 'jsx?' --config --output-type dot | dot -T svg > deps.svg",
     "husky-init": "husky install",
-    "lint": "yarn eslint src && tsc",
+    "lint": "yarn lint-src && yarn lint-tools",
+    "lint-src": "yarn eslint src && tsc",
+    "lint-tools": "yarn eslint --rule no-console:off config cypress",
     "precommit": "yarn lint && yarn test",
     "serve-cosmos": "cosmos --config .cosmos.config.json",
     "serve-share-conway": "yarn build-share-conway && USE_WEBIFC_SHIM=true node config/serve.js",
