--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "postprocessing": "^6.29.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-cosmos-plugin-webpack": "^6.0.0-beta.6",
     "react-dom": "^18.2.0",
     "react-feature-flags": "^1.0.0",
     "react-helmet-async": "^1.3.0",
@@ -82,8 +83,9 @@
     "@bahmutov/cypress-esbuild-preprocessor": "^2.1.3",
     "@mui/types": "^7.2.3",
     "@pablo-mayrgundter/cookies.js": "^1.0.0",
-    "@svgr/plugin-jsx": "^8.0.1",
-    "@svgr/webpack": "^8.0.1",
+    "@svgr/core": "^8.1.0",
+    "@svgr/plugin-jsx": "^8.1.0",
+    "@svgr/webpack": "^8.1.0",
     "@testing-library/cypress": "^10.0.1",
     "@testing-library/dom": "^8.19.1",
     "@testing-library/jest-dom": "^5.16.5",
@@ -98,8 +100,7 @@
     "canvas": "^2.11.0",
     "cypress": "^13.2.0",
     "cypress-real-events": "^1.10.3",
-    "esbuild": "^0.16.17",
-    "esbuild-clean-plugin": "^1.0.0",
+    "esbuild": "^0.17.19",
     "esbuild-copy-static-files": "^0.1.0",
     "esbuild-plugin-progress": "^1.0.1",
     "esbuild-plugin-svgr": "^2.0.0",
@@ -113,14 +114,13 @@
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-testing-library": "^5.9.1",
-    "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "jsdom": "^20.0.3",
     "msw": "^0.47.4",
-    "react-cosmos": "^5.7.2",
+    "react-cosmos": "^6.0.0-beta.6",
     "shx": "^0.3.4",
     "webpack": "^5.75.0"
   },
