Cosmos 6 working. Actually use esubild 0.16.17.

--- a/.cosmos.config.json
+++ b/.cosmos.config.json
@@ -6,5 +6,6 @@
   "publicUrl": "./",
   "webpack": {
     "configPath": ".cosmos.webpack.js"
-  }
+  },
+  "plugins": ["react-cosmos-plugin-webpack"]
 }
