--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bldrs",
-  "version": "1.0.0-r743",
+  "version": "1.0.0-r745",
   "main": "src/index.jsx",
   "license": "MIT",
   "homepage": "https://github.com/bldrs-ai/Share",
@@ -59,6 +59,7 @@
     "postprocessing": "^6.29.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-cosmos-plugin-webpack": "^6.0.0-beta.6",
     "react-dom": "^18.2.0",
     "react-feature-flags": "^1.0.0",
     "react-helmet-async": "^1.3.0",
@@ -82,8 +83,9 @@
     "@bahmutov/cypress-esbuild-preprocessor": "^2.1.3",
     "@mui/types": "^7.2.3",
     "@pablo-mayrgundter/cookies.js": "^1.0.0",
-    "@svgr/plugin-jsx": "^8.0.1",
-    "@svgr/webpack": "^8.0.1",
+    "@svgr/core": "^8.1.0",
+    "@svgr/plugin-jsx": "^8.1.0",
+    "@svgr/webpack": "^8.1.0",
     "@testing-library/cypress": "^10.0.1",
     "@testing-library/dom": "^8.19.1",
     "@testing-library/jest-dom": "^5.16.5",
@@ -120,7 +122,7 @@
     "jest-environment-jsdom": "^29.3.1",
     "jsdom": "^20.0.3",
     "msw": "^0.47.4",
-    "react-cosmos": "^5.7.2",
+    "react-cosmos": "^6.0.0-beta.6",
     "shx": "^0.3.4",
     "webpack": "^5.75.0"
   },
