--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bldrs",
-  "version": "1.0.0-r745",
+  "version": "1.0.0-r755",
   "main": "src/index.jsx",
   "license": "MIT",
   "homepage": "https://github.com/bldrs-ai/Share",
@@ -12,27 +12,27 @@
     "build-conway": "yarn clean && yarn build-share-conway && yarn build-cosmos",
     "build-webifc": "yarn clean && yarn build-share-webifc && yarn build-cosmos",
     "build-cosmos": "shx rm -rf docs/cosmos; shx mkdir -p docs ; cosmos-export --config .cosmos.config.json && shx mv cosmos-export docs/cosmos",
-    "build-share": "yarn write-new-version && node config/build.js",
-    "build-share-conway": "USE_WEBIFC_SHIM=true yarn build-share && yarn build-share-copy-web-asm-conway",
-    "build-share-webifc": "USE_WEBIFC_SHIM=false yarn build-share && yarn build-share-copy-web-asm-webifc",
-    "build-share-copy-web-asm-webifc": "shx cp node_modules/web-ifc/*.wasm docs/static/js",
-    "build-share-copy-web-asm-conway": "shx cp node_modules/bldrs-conway/compiled/dependencies/conway-geom/Dist/*.wasm docs/static/js",
+    "build-share": "yarn write-new-version && node tools/esbuild/build.js && shx mkdir -p docs/static/js",
+    "build-share-conway": "USE_WEBIFC_SHIM=true yarn build-share && yarn build-share-copy-wasm-conway",
+    "build-share-webifc": "USE_WEBIFC_SHIM=false yarn build-share && yarn build-share-copy-wasm-webifc",
+    "build-share-copy-wasm-webifc": "shx cp node_modules/web-ifc/*.wasm docs/static/js",
+    "build-share-copy-wasm-conway": "shx cp node_modules/bldrs-conway/compiled/dependencies/conway-geom/Dist/*.wasm docs/static/js",
     "clean": "shx rm -rf docs",
-    "deps-graph": "npx dependency-cruiser src --include-only 'jsx?' --config --output-type dot | dot -T svg > deps.svg",
-    "husky-init": "husky install",
-    "lint": "yarn lint-src && yarn lint-tools",
-    "lint-src": "yarn eslint src && tsc",
-    "lint-tools": "yarn eslint --rule no-console:off config cypress",
-    "precommit": "yarn lint && yarn test",
-    "serve-cosmos": "cosmos --config .cosmos.config.json",
-    "serve-share-conway": "yarn build-share-conway && USE_WEBIFC_SHIM=true node config/serve.js",
-    "serve-share-webifc": "yarn build-share-webifc && USE_WEBIFC_SHIM=false node config/serve.js",
-    "serve": "yarn serve-share-webifc",
-    "test": "jest",
     "cypress:open": "cypress run",
     "cypress-spec": "cypress run --spec",
     "cypress-headed": "cypress run --headed --browser chrome --no-exit",
     "cypress-headed-spec": "cypress run --headed --browser chrome --no-exit --spec",
+    "deps-graph": "npx dependency-cruiser src --include-only 'jsx?' --config --output-type dot | dot -T svg > deps.svg",
+    "husky-init": "husky install",
+    "lint": "yarn lint-src && yarn lint-tools",
+    "lint-src": "yarn eslint src && tsc -p tools/tsconfig.json",
+    "lint-tools": "yarn eslint --rule no-console:off cypress tools",
+    "precommit": "yarn lint && yarn test",
+    "serve": "yarn serve-share-webifc",
+    "serve-cosmos": "cosmos --config .cosmos.config.json",
+    "serve-share-conway": "yarn build-share-conway && USE_WEBIFC_SHIM=true node tools/esbuild/serve.js",
+    "serve-share-webifc": "yarn build-share-webifc && USE_WEBIFC_SHIM=false node tools/esbuild/serve.js",
+    "test": "jest --config tools/jest/jest.config.js",
     "write-new-version": "node src/utils/version.mjs > package.json.new && shx mv package.json.new package.json"
   },
   "dependencies": {
@@ -100,7 +100,7 @@
     "canvas": "^2.11.0",
     "cypress": "^13.2.0",
     "cypress-real-events": "^1.10.3",
-    "esbuild": "^0.16.17",
+    "esbuild": "0.19.5",
     "esbuild-clean-plugin": "^1.0.0",
     "esbuild-copy-static-files": "^0.1.0",
     "esbuild-plugin-progress": "^1.0.1",
