--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bldrs",
-  "version": "1.0.0-r733",
+  "version": "1.0.0-r734",
   "main": "src/index.jsx",
   "license": "MIT",
   "homepage": "https://github.com/bldrs-ai/Share",
@@ -13,7 +13,7 @@
     "build-webifc": "yarn clean && yarn build-share-webifc && yarn build-cosmos",
     "build-cosmos": "shx rm -rf docs/cosmos; shx mkdir -p docs ; cosmos-export --config .cosmos.config.json && shx mv cosmos-export docs/cosmos",
     "build-share": "yarn write-new-version && node config/build.js",
-    "build-share-conway": "USE_WEBIFC_SHIM=true yarn build-share && yarn build-share-copy-web-asm-conway",
+    "build-share-conway": "USE_WEBIFC_SHIM=true yarn build-share",
     "build-share-webifc": "USE_WEBIFC_SHIM=false yarn build-share && yarn build-share-copy-web-asm-webifc",
     "build-share-copy-web-asm-webifc": "shx cp node_modules/web-ifc/*.wasm docs/static/js",
     "build-share-copy-web-asm-conway": "shx cp node_modules/bldrs-conway/compiled/dependencies/conway-geom/Dist/*.wasm docs/static/js",
@@ -47,7 +47,6 @@
     "@octokit/rest": "^19.0.3",
     "@sentry/react": "^7.61.0",
     "@sentry/tracing": "^7.61.0",
-    "bldrs-conway": "./bldrs-conway-v0.0.1.tgz",
     "clsx": "^1.2.1",
     "cypress-react-router": "^2.0.1",
     "material-ui-popup-state": "^5.0.4",
