--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bldrs",
-  "version": "1.0.0-r749",
+  "version": "1.0.0-r755",
   "main": "src/index.jsx",
   "license": "MIT",
   "homepage": "https://github.com/bldrs-ai/Share",
@@ -38,6 +38,7 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.0.0",
     "@babel/core": "^7.18.10",
+    "@bldrs-ai/conway": "./bldrs-ai-conway-v0.1.0.tgz",
     "@bldrs-ai/ifclib": "^5.3.3",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
