--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-markdown": "^8.0.3",
     "react-qr-code": "^2.0.12",
     "react-router-dom": "^6.3.0",
+    "react-swipeable": "^7.0.1",
     "remark-gfm": "^3.0.1",
     "three": "^0.135",
     "typescript": "^4.8.4",
