--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bldrs",
-  "version": "1.0.0-r760",
+  "version": "1.0.757",
   "main": "src/index.jsx",
   "license": "MIT",
   "homepage": "https://github.com/bldrs-ai/Share",
@@ -12,7 +12,7 @@
     "build-conway": "yarn clean && yarn build-share-conway && yarn build-cosmos",
     "build-webifc": "yarn clean && yarn build-share-webifc && yarn build-cosmos",
     "build-cosmos": "shx rm -rf docs/cosmos; shx mkdir -p docs ; cosmos-export --config .cosmos.config.json && shx mv cosmos-export docs/cosmos",
-    "build-share": "yarn write-new-version && node tools/esbuild/build.js && shx mkdir -p docs/static/js",
+    "build-share": "yarn update-version && node tools/esbuild/build.js && shx mkdir -p docs/static/js",
     "build-share-conway": "USE_WEBIFC_SHIM=true yarn build-share",
     "build-share-webifc": "USE_WEBIFC_SHIM=false yarn build-share && yarn build-share-copy-wasm-webifc",
     "build-share-copy-wasm-webifc": "shx cp node_modules/web-ifc/*.wasm docs/static/js",
@@ -33,7 +33,7 @@
     "serve-share-conway": "yarn build-share-conway && USE_WEBIFC_SHIM=true node tools/esbuild/serve.js",
     "serve-share-webifc": "yarn build-share-webifc && USE_WEBIFC_SHIM=false node tools/esbuild/serve.js",
     "test": "jest --config tools/jest/jest.config.js",
-    "write-new-version": "node src/utils/version.mjs > package.json.new && shx mv package.json.new package.json"
+    "update-version": "./scripts/updateVersion.mjs"
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.0.0",
