--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bldrs",
-  "version": "1.0.782",
+  "version": "1.0.784",
   "main": "src/index.jsx",
   "license": "MIT",
   "homepage": "https://github.com/bldrs-ai/Share",
@@ -15,10 +15,10 @@
     "build-share": "yarn update-version && node tools/esbuild/build.js && shx mkdir -p docs/static/js",
     "build-share-conway": "run-script-os",
     "build-share-conway:win32": "set USE_WEBIFC_SHIM=true&& yarn build-share",
-    "build-share-conway:darwin": "USE_WEBIFC_SHIM=true yarn build-share",
+    "build-share-conway:linux:darwin": "USE_WEBIFC_SHIM=true yarn build-share",
     "build-share-webifc": "run-script-os",
     "build-share-webifc:win32": "set USE_WEBIFC_SHIM=false&& yarn build-share && yarn build-share-copy-wasm-webifc",
-    "build-share-webifc:darwin": "USE_WEBIFC_SHIM=false yarn build-share && yarn build-share-copy-wasm-webifc",
+    "build-share-webifc:linux:darwin": "USE_WEBIFC_SHIM=false yarn build-share && yarn build-share-copy-wasm-webifc",
     "build-share-copy-wasm-webifc": "shx cp node_modules/web-ifc/*.wasm docs/static/js",
     "build-share-copy-wasm-conway": "shx cp node_modules/@bldrs-ai/conway/compiled/dependencies/conway-geom/Dist/*.wasm docs/static/js",
     "clean": "shx rm -rf docs",
@@ -36,10 +36,10 @@
     "serve-cosmos": "cosmos --config .cosmos.config.json",
     "serve-share-conway": "run-script-os",
     "serve-share-conway:win32": "yarn build-share-conway && set USE_WEBIFC_SHIM=true&& node tools/esbuild/serve.js",
-    "serve-share-conway:darwin": "yarn build-share-conway && USE_WEBIFC_SHIM=true node tools/esbuild/serve.js",
+    "serve-share-conway:linux:darwin": "yarn build-share-conway && USE_WEBIFC_SHIM=true node tools/esbuild/serve.js",
     "serve-share-webifc": "run-script-os",
     "serve-share-webifc:win32": "yarn build-share-webifc && set USE_WEBIFC_SHIM=false&& node tools/esbuild/serve.js",
-    "serve-share-webifc:darwin": "yarn build-share-webifc && USE_WEBIFC_SHIM=false node tools/esbuild/serve.js",
+    "serve-share-webifc:linux:darwin": "yarn build-share-webifc && USE_WEBIFC_SHIM=false node tools/esbuild/serve.js",
     "test": "jest --config tools/jest/jest.config.js",
     "update-version": "./scripts/updateVersion.mjs"
   },
